--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -28,10 +28,17 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Run golangci-lint
+
+      - name: Install golangci-lint
         run: |
           curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.54.2
-          golangci-lint run
+          echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
+
+      - name: Verify golangci-lint installation
+        run: golangci-lint --version
+
+      - name: Run golangci-lint
+        run: golangci-lint run ./...
 
   run-tests:
     name: Run Tests
