--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -22,23 +22,23 @@ jobs:
             exit 1
           fi
 
-  run-linter:
-    name: Run Linter
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+  #   run-linter:
+  #     name: Run Linter
+  #     runs-on: ubuntu-latest
+  #     steps:
+  #       - name: Checkout code
+  #         uses: actions/checkout@v4
 
-      - name: Install golangci-lint
-        run: |
-          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.54.2
-          echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
+  #       - name: Install golangci-lint
+  #         run: |
+  #           curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.54.2
+  #           echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
 
-      - name: Verify golangci-lint installation
-        run: golangci-lint --version
+  #       - name: Verify golangci-lint installation
+  #         run: golangci-lint --version
 
-      - name: Run golangci-lint
-        run: golangci-lint run ./...
+  #       - name: Run golangci-lint
+  #         run: golangci-lint run ./...
 
   run-tests:
     name: Run Tests
