--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -50,39 +50,39 @@ jobs:
         run: |
           go test -coverprofile=coverage.out ./...
 
-  check-coverage:
-    name: Check Test Coverage
-    needs: run-tests
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+#   check-coverage:
+#     name: Check Test Coverage
+#     needs: run-tests
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v3
 
-      - name: Parse .covignore and exclude paths
-        id: parse-covignore
-        run: |
-          IGNORE_PATHS=$(cat .covignore | sed 's/^/-not -path "**\//' | tr '\n' ' ')
-          echo "IGNORE_PATHS=$IGNORE_PATHS" >> $GITHUB_ENV
+#       - name: Parse .covignore and exclude paths
+#         id: parse-covignore
+#         run: |
+#           IGNORE_PATHS=$(cat .covignore | sed 's/^/-not -path "**\//' | tr '\n' ' ')
+#           echo "IGNORE_PATHS=$IGNORE_PATHS" >> $GITHUB_ENV
 
-      - name: Filter coverage file
-        run: |
-          # Exclude ignored files from the coverage file
-          cat coverage.out | while read line; do
-          if [[ $line == *"mode:"* ]]; then
-              echo $line
-          else
-              FILE=$(echo $line | cut -d: -f1)
-              if ! echo $FILE | grep $IGNORE_PATHS; then
-              echo $line
-              fi
-          fi
-          done > filtered_coverage.out
+#       - name: Filter coverage file
+#         run: |
+#           # Exclude ignored files from the coverage file
+#           cat coverage.out | while read line; do
+#           if [[ $line == *"mode:"* ]]; then
+#               echo $line
+#           else
+#               FILE=$(echo $line | cut -d: -f1)
+#               if ! echo $FILE | grep $IGNORE_PATHS; then
+#               echo $line
+#               fi
+#           fi
+#           done > filtered_coverage.out
 
-      - name: Validate coverage
-        run: |
-          TOTAL_COVERAGE=$(go tool cover -func=filtered_coverage.out | grep total | awk '{print $3}' | sed 's/%//')
-          echo "Total Coverage: $TOTAL_COVERAGE%"
-          if (( $(echo "$TOTAL_COVERAGE < 80" | bc -l) )); then
-          echo "❌ Test coverage is below 80%. Current coverage: $TOTAL_COVERAGE%"
-          exit 1
-          fi
+#       - name: Validate coverage
+#         run: |
+#           TOTAL_COVERAGE=$(go tool cover -func=filtered_coverage.out | grep total | awk '{print $3}' | sed 's/%//')
+#           echo "Total Coverage: $TOTAL_COVERAGE%"
+#           if (( $(echo "$TOTAL_COVERAGE < 80" | bc -l) )); then
+#           echo "❌ Test coverage is below 80%. Current coverage: $TOTAL_COVERAGE%"
+#           exit 1
+#           fi
