--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   server:
     build:
       context: .
-      dockerfile: cmd/server/Dockerfile
+      dockerfile: Dockerfile
     container_name: server_container
     ports:
       - "8080:8080"
